Changes for 2.2.19rc1

New features:

Bug fixes:
A......... [ZBX-12023] fixed permission issue with event.get method (Sasha)
.......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
.......PS. [ZBX-11584] fixed selection of ntext data from Microsoft SQL Server using 'db.odbc.select' item key (Sergejs)
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
..F....... [ZBX-11888] fixed chart name urlencoding for web scenario reports; thanks to Kotaro Miyashita for patch (miks)

--------------------------------------------------------------------------------
Changes for 2.2.18

2.2.18rc1 was released as 2.2.18 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.18rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)
........S. [ZBX-12076] fixed security vulnerability with execution of the remote commands on proxy; thanks to Lilith Wyatt, Cisco Systems (gleb)
A......... [ZBX-7492] fixed undefined index and invalid argument supplied to foreach errors in case if macros tag is empty or is not included in the XML import file (miks)
..F....... [ZBX-11345] fixed webscenario update error when step does not exist (gcalenko)
...G...... [ZBX-11959] fixed memory leak in the agent on OpenBSD, FreeBSD and NetBSD (abs)
.......PS. [ZBX-11807] fixed poller stalling due to incorrect handling of unixODBC library (viktors)
A......... [ZBX-9358] improved randomness in session ID generation (vmurzins)
A......... [ZBX-11893] fixed permission issue, when importing hosts that are monitored by proxy by Zabbix Admin type user (vmurzins)
..F....... [ZBX-11933] added fullscreen parameter in link to submap in maps (vmurzins)